--- a/Items Page/Translations/Items Page Changes.da-DK.xlf
+++ b/Items Page/Translations/Items Page Changes.da-DK.xlf
@@ -11,7 +11,7 @@
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 1046588192 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Body (HTML)</source>
-          <target state="translated">Body (HTML)</target>
+          <target state="translated">Produktbeskrivelse til webshop</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Body HTML Card Extension - Control Body (HTML) - Property Caption</note>
         </trans-unit>
@@ -171,11 +171,11 @@
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Pack L Card Extension - Control Packaging length (cm) - Property Caption</note>
         </trans-unit>
-        <trans-unit id="PageExtension 3226554048 - Control 2156432844 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
-          <source>Packaging weight (cm)</source>
-          <target state="translated">Emballage vægt (cm)</target>
+        <trans-unit id="PageExtension 3226554048 - Control 3724451934 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Packaging weight (kg)</source>
+          <target state="translated">Emballage vægt (kg)</target>
           <note from="Developer" annotates="general" priority="2"/>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Pack W Card Extension - Control Packaging weight (cm) - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Pack W Card Extension - Control Packaging weight (kg) - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 1178075874 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Packaging width (cm)</source>
@@ -239,13 +239,13 @@
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 1936001480 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Vendor</source>
-          <target state="translated">Sælger?</target>
+          <target state="translated">Leverandør</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Vendor Card Extension - Control Vendor - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 2854289444 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Weight (kg)</source>
-          <target state="translated">Vægt (cm)</target>
+          <target state="translated">Vægt (kg)</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Weight Card Extension - Control Weight - Property Caption</note>
         </trans-unit>
@@ -263,7 +263,7 @@
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 1046588192 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Body (HTML)</source>
-          <target state="translated">Body (HTML)</target>
+          <target state="translated">Produktbeskrivelse til webshop</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Body HTML Extension - Field Body (HTML) - Property Caption</note>
         </trans-unit>
@@ -423,11 +423,11 @@
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Pack L Extension - Field Packaging length (cm) - Property Caption</note>
         </trans-unit>
-        <trans-unit id="TableExtension 901006396 - Field 2156432844 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
-          <source>Packaging weight (cm)</source>
-          <target state="translated">Emballage vægt (cm)</target>
+        <trans-unit id="TableExtension 901006396 - Field 3724451934 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Packaging weight (kg)</source>
+          <target state="translated">Emballage vægt (kg)</target>
           <note from="Developer" annotates="general" priority="2"/>
-          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Pack W Extension - Field Packaging weight (cm) - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Pack W Extension - Field Packaging weight (kg) - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 1178075874 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Packaging width (cm)</source>
@@ -491,13 +491,13 @@
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 1936001480 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Vendor</source>
-          <target state="translated">Sælger?</target>
+          <target state="translated">Leverandør</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Vendor Extension - Field Vendor - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 2854289444 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Weight (kg)</source>
-          <target state="translated">Vægt (cm)</target>
+          <target state="translated">Vægt (kg)</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Weight Extension - Field Weight - Property Caption</note>
         </trans-unit>
